import "MatrixPieceListWire.proto" ;
import "NodeListWire.proto" ;
import "RectangleWire.proto" ;
import "SendMatrixPieceListWire.proto" ;
import "TypeWire.proto" ;

option java_package = "it.unipr.aotlab.dmat.core.generated" ;

message OrderTernaryOp {
    required string outputMatrixId = 1;
    required string outputNodeId = 2;
    required string firstOperandMatrixId = 3;
    required string secondOperandMatrixId = 4;
    required RectangleBody outputPosition = 5;
    required TypeBody type = 6;
}

message OrderTernaryOpBody {
    required NodeListBody destination = 1;
    required SendMatrixPieceListBody piecesToSend = 2;
    required MatrixPieceListBody missingPieces = 3;
    required MatrixPieceListBody awaitingUpdates = 4;
    repeated OrderTernaryOp operation = 5;
}

