import "RectangleWire.proto";
import "NodeListWire.proto" ;

option java_package = "it.unipr.aotlab.dmat.core.generated" ;

message SendMatrixPiece {
    required string matrixId = 1;
    required RectangleBody neededPiece = 2;
    required bool update = 3;
    repeated string recipient = 4;
}

message SendMatrixPieceListBody {
    repeated SendMatrixPiece sendMatrixPiece = 1;
}

